# spudlang

./: .gitignore  FormatCheck.py  Ingredient.py  Lex.py  Lex2.py  MyNumber.py  Parse.py  Parse2.py  Pattern.py  PreLex.py  README.md  ResultsTree.py  Rule.py  RuleOutput.py  rules.txt  setup.cfg  spud.py  test_html_creation.py  testing.py
grammar/: Spud.g4
src/spudlang/: Ingredient.py  Lex.py  MyNumber.py  Parse.py  Pattern.py  PreLex.py  ResultsTree.py  Rule.py  RuleOutput.py  SourceVersionCheck.py  SpudLexer.py  SpudLoader.py  SpudParser.py  __main__.py
test_dir/: a.spud  b.spud  main.spud
test_dir/sub/: hello_world.spud
tests/: test_html_creation.py  testing.py
tests/test_dir/: a.spud  main.spud
tests/test_dir/sub/: hello_world.spud  hello_world.spudh
