[metadata]
name = spudlang
version = 0.3.0
author = Aaron Stanek
author_email = amr.stanek@gmail.com
description = Domain-specific programming language for creating shopping lists
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aaronstanek/spudlang
project_urls =
    Bug Tracker = https://github.com/aaronstanek/spudlang/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = ~=3.6
install_requires =
    antlr4-python3-runtime >= 4.9.2

[options.packages.find]
where = src